Resources/CSS/main-layout/schedule.css
:root {
	--timeslot: 90px;
	width: 260px;
	--media-query--schedule-flex-direction: row;
}

.schedule {
	width: 100%;
	margin-top: 4rem;
}

/* Timetable */
.talks-timetable {
	display: flex;
	flex-direction: var(--media-query--schedule-flex-direction);
	gap: 1rem;
	justify-content: center;
	align-items: center;
	padding-top: 4rem;
	padding-bottom: 4rem;
}

.room-cloud-center,
.room-the-garden,
.room-the-aula {
	border-radius: 30px;
	padding: 2rem;
	font-family: "Raleway", sans-serif;
	font-size: 1.25rem;
	text-align: center;
	font-weight: 600;
	background-color: rgba(46, 108, 110, 0.164);
}

.talk-cloud-center,
.talk-the-garden,
.timeslot,
.talk-the-aula {
	height: var(--timeslot);
	border-radius: 10px;
	padding: 1rem;
	display: flex;
	align-content: stretch;
	justify-content: space-evenly;
	align-items: center;
	flex-direction: column;
	width: 100%;
	flex-wrap: nowrap;
	margin-top: 1rem;
	margin-bottom: 1rem;
	max-width: 365px;
}

.timeslot {
	width: 365px;
	background-color: rgba(105, 75, 75, 0.123);
	border: 1px dashed rgba(0, 0, 0, 0.507);
	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.274);
}
.time-15 {
	height: var(--timeslot);
}
.time-30 {
	height: calc(var(--timeslot) * 2);
}
.time-45 {
	height: calc(var(--timeslot) * 3);
}
.time-60 {
	height: calc(var(--timeslot) * 4);
}
.time-75 {
	height: calc(var(--timeslot) * 5);
}
.time-90 {
	height: calc(var(--timeslot) * 6);
}
.time-120 {
	height: calc(var(--timeslot) * 8);
}

.talk-the-garden {
	box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.712);
	border: 1px solid black;
	background-color: rgba(199, 189, 96, 0.712);
}
.talk-cloud-center {
	box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.712);
	border: 1px solid black;
	background-color: rgba(102, 175, 175, 0.712);
}
.talk-the-aula {
	box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.103);
	border: 1px solid black;
	background-color: rgba(59, 224, 18, 0.438);
}

@media (max-width: 1024px) {
	:root {
		--media-query--schedule-flex-direction: column;
	}
}

